--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,20 @@
     overflow: hidden;
 }
 
+#code-particles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.interface {
+  position: relative;
+  z-index: 1;
+}
+
 .home-section::before {
     content: '';
     position: absolute;
